--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     .bindPopup(`<h3>中华基督教礼贤会九龙堂</h3><img src="datas/media_datas/留港小文成长记_66378fcd0000000003033a10/香港｜这9个经典拍照机位一定要拍！_66d83d48000000001e019ceb/image_3.jpg" width="200">`);
 
     // ✅ 正确方式：传入 KML 文件路径，而不是 XML 对象
-    const track = new L.KML("your_map.kml");
-    map.addLayer(track);
-    map.fitBounds(track.getBounds());
+    // const track = new L.KML("your_map.kml");
+    // map.addLayer(track);
+    // map.fitBounds(track.getBounds());
   </script>
 </body>
 </html>
